--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,9 @@
 
+# = DATA SOURCE# ===============================spring.datasource.driver-class-name=org.h2.Driverspring.datasource.url =
+jdbc:h2:mem:productmsspring.datasource.username =
+bhuvispring.datasource.password=
+riya# ===============================# JPA / HIBERNATE / with h2# ===============================spring.jpa.show-sql =
+falsespring.jpa.hibernate.ddl-auto =
+createspring.jpa.properties.hibernate.dialect =
+org.hibernate.dialect.H2Dialecthibernate.format_sql=true;
+
